# guadalinex-v6

apps/gdm-guest-session/trunk/: Makefile  xnest-guest
apps/gedit-plugin-tloleo/tags/gedit-plugin-tloleo-2.26.1/: Makefile.am  configure.ac
apps/gedit-plugin-tloleo/tags/gedit-plugin-tloleo-2.26.1/debian/: changelog  control  rules
apps/gedit-plugin-tloleo/tags/gedit-plugin-tloleo-2.26.1/plugins/TLoleo/: gedit-TLoleo-plugin.c
apps/gfxboot-theme-guada/gfxboot-theme-guada-0.2.1/: common.inc  help.inc  panel.inc  xmenu.inc
apps/java-common/trunk/: policy.xml
apps/language-pack-es-base/trunk/: scrip
apps/nautilus/trunk/: aclocal.m4  config.h.in
apps/python-syck/trunk/: README.txt  setup.cfg
binpkgs/cinelerra/: libguicastcv_2.1.1-git20090428akirad3_i386.deb  libmpeg3cv_2.1.1-git20090428akirad3_i386.deb  libquicktimecv_2.1.1-git20090428akirad3_i386.deb  optlibx11-noxcb-6_2%3a1.1.3-1akirad1_i386.deb  optlibx11-noxcb-data_2%3a1.1.3-1akirad1_all.deb
binpkgs/me-tv/: me-tv_0.8.9-0ubuntu1~ppa1.dsc  me-tv_0.8.9-0ubuntu1~ppa1_i386.deb
gensys/: external-packages-included  pbuilderrc  update-derivative-repository
gensys/gensys-config-files/: distributions
gensys/gensys-scripts/: build.sh  create-supplement-desktops  update-derivative-repository
gensys/live-helper/guadalinexv6/: build.sh
metapkgs/guadalinex-about/gcs/: info
metapkgs/guadalinex-artwork/gcs/: depends  info
metapkgs/guadalinex-desktop-conf/gcs/: info
metapkgs/guadalinex-desktop/gcs/: depends  info  predepends
testsys/: custombuildsteps.py  guadalinex.py  master.cfg  start  stop
(+4139 files in other folders)
